include_directories(${clonk-rage_SOURCE_DIR}/engine/inc)
include_directories(${clonk-rage_SOURCE_DIR}/engine/sec)
include_directories(${clonk-rage_SOURCE_DIR}/standard/inc)
link_directories(${clonk-rage_SOURCE_DIR}/standard/src)

set(ENGINE_SOURCES
  C4AList.cpp
  C4Action.cpp
  C4Application.cpp
  C4Aul.cpp
  C4AulExec.cpp
  C4AulLink.cpp
  C4AulParse.cpp
  C4ChatDlg.cpp
  C4Client.cpp
  C4Command.cpp
  C4ComponentHost.cpp
  C4Config.cpp
  C4Console.cpp
  C4Control.cpp
  C4Def.cpp
  C4DefGraphics.cpp
  C4DevmodeDlg.cpp
  C4DownloadDlg.cpp
  C4EditCursor.cpp
  C4Effect.cpp
  C4Extra.cpp
  C4Facet.cpp
  C4FacetEx.cpp
  C4FileMonitor.cpp
  C4FileSelDlg.cpp
  C4FindObject.cpp
  C4FogOfWar.cpp
  C4Folder.cpp
  C4Fonts.cpp
  C4FullScreen.cpp
  C4Game.cpp
  C4GameControl.cpp
  C4GameControlNetwork.cpp
  C4GameDialogs.cpp
  C4GameLobby.cpp
  C4GameMessage.cpp
  C4GameObjects.cpp
  C4GameOptions.cpp
  C4GameOverDlg.cpp
  C4GamePadCon.cpp
  C4GameParameters.cpp
  C4GameSave.cpp
  C4GraphicsResource.cpp
  C4GraphicsSystem.cpp
  C4Group.cpp
  C4GroupSet.cpp
  C4Gui.cpp
  C4GuiButton.cpp
  C4GuiCheckBox.cpp
  C4GuiComboBox.cpp
  C4GuiContainers.cpp
  C4GuiDialogs.cpp
  C4GuiEdit.cpp
  C4GuiLabels.cpp
  C4GuiListBox.cpp
  C4GuiMenu.cpp
  C4GuiTabular.cpp
  C4IDList.cpp
  C4Id.cpp
  C4Include.cpp
  C4InfoCore.cpp
  C4InputValidation.cpp
  C4InteractiveThread.cpp
  C4KeyboardInput.cpp
  C4Landscape.cpp
  C4LangStringTable.cpp
  C4Language.cpp
  C4League.cpp
  C4LoaderScreen.cpp
  C4Log.cpp
  C4LogBuf.cpp
  C4MainMenu.cpp
  C4Map.cpp
  C4MapCreatorS2.cpp
  C4MassMover.cpp
  C4Material.cpp
  C4MaterialList.cpp
  C4Menu.cpp
  C4MessageBoard.cpp
  C4MessageInput.cpp
  C4MouseControl.cpp
  C4Movement.cpp
  C4MusicFile.cpp
  C4MusicSystem.cpp
  C4NameList.cpp
  C4NetIO.cpp
  C4Network2.cpp
  C4Network2Client.cpp
  C4Network2Dialogs.cpp
  C4Network2Discover.cpp
  C4Network2IO.cpp
  C4Network2IRC.cpp
  C4Network2Players.cpp
  C4Network2Reference.cpp
  C4Network2Res.cpp
  C4Network2ResDlg.cpp
  C4Network2Stats.cpp
  C4NoNetwork.cpp
  C4Object.cpp
  C4ObjectCom.cpp
  C4ObjectInfo.cpp
  C4ObjectInfoList.cpp
  C4ObjectList.cpp
  C4ObjectListDlg.cpp
  C4ObjectMenu.cpp
  C4PXS.cpp
  C4Packet2.cpp
  C4Particles.cpp
  C4PathFinder.cpp
  C4Player.cpp
  C4PlayerInfo.cpp
  C4PlayerInfoConflicts.cpp
  C4PlayerInfoListBox.cpp
  C4PlayerList.cpp
  C4PropertyDlg.cpp
  C4RTF.cpp
  C4Random.cpp
  C4RankSystem.cpp
  C4Record.cpp
  C4Region.cpp
  C4RoundResults.cpp
  C4Scenario.cpp
  C4Scoreboard.cpp
  C4Script.cpp
  C4ScriptHost.cpp
  C4Sector.cpp
  C4Shape.cpp
  C4Sky.cpp
  C4SolidMask.cpp
  C4SoundSystem.cpp
  C4Startup.cpp
  C4StartupAboutDlg.cpp
  C4StartupMainDlg.cpp
  C4StartupNetDlg.cpp
  C4StartupOptionsDlg.cpp
  C4StartupPlrSelDlg.cpp
  C4StartupScenSelDlg.cpp
  C4Stat.cpp
  C4StringTable.cpp
  C4Surface.cpp
  C4SurfaceFile.cpp
  C4Teams.cpp
  C4Texture.cpp
  C4ToolsDlg.cpp
  C4TransferZone.cpp
  C4Update.cpp
  C4UpdateDlg.cpp
  C4UpperBoard.cpp
  C4Value.cpp
  C4ValueList.cpp
  C4ValueMap.cpp
  C4Video.cpp
  C4VideoPlayback.cpp
  C4Viewport.cpp
  C4Weather.cpp
  C4WinMain.cpp
  C4Wrappers.cpp
)

if(WIN32)
  list(APPEND ENGINE_SOURCES
    C4FileClasses.cpp
  )
elseif(APPLE)
elseif(UNIX)
endif()

add_executable(engine ${ENGINE_SOURCES})
target_link_libraries(engine ${LIBS} standard)
